--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     container_name: trojan-go
     restart: always
     ports:
-      - "8443:8443"
+      - "127.0.0.1:8443:8443"
     volumes:
-      - /root/newbles/trojan-go/config.json:/config.json:ro
-      - /root/newbles/cert:/cert:ro
-    command: [ "-config", "/config.json" ] 
+      - ./trojan-go/config.json:/config.json:ro
+      - ./cert:/cert:ro
+   
